--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(R6ClassDocuStatus)
 export(cleanup_output)
 export(create_docu_skeleton)
+export(create_pdf_output_skeleton)
 export(move_doc_to_subdir)
 importFrom(R6,R6Class)
