Added odg graphics creation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 export(R6ClassDocuStatus)
 export(R6ClassTableAbbrev)
 export(cleanup_output)
+export(convertLibOToPdf)
 export(create_docu_skeleton)
+export(create_odg_graphic)
 export(create_pdf_output_skeleton)
+export(genericScaledPlot)
+export(insertOdgAsPdf)
 export(move_doc_to_subdir)
 importFrom(R6,R6Class)
