Changes to document status and templating

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(R6ClassDocuStatus)
 export(R6ClassTableAbbrev)
 export(cleanup_output)
 export(create_docu_skeleton)
+export(create_html_output_skeleton)
 export(create_odg_graphic)
 export(create_pdf_output_skeleton)
 export(genericScaledPlot)
