Added insertOdsAsPdf as function to convert ods tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(create_pdf_output_skeleton)
 export(genericScaledPlot)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
+export(insertOdsAsPdf)
 export(move_doc_to_subdir)
 importFrom(R6,R6Class)
