--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,5 @@ export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
 export(move_doc_to_subdir)
+export(odg.graphics.conv.hook)
 importFrom(R6,R6Class)
