Added converter for R matrix to LaTeX array

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,6 @@ export(insertOdgAsPng)
 export(insertOdsAsPdf)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
+export(sConvertMatrixToLaTexArray)
+export(vecGetVecElem)
 importFrom(R6,R6Class)
