Changes in latex helper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(genericScaledPlot)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
+export(matGetMatElem)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
 export(sConvertMatrixToLaTexArray)
