Updated version with generating multiple graphics formats

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(R6ClassDocuStatus)
 export(R6ClassTableAbbrev)
+export(R6RmdDocInfo)
+export(bookdown_cleanup)
 export(cleanup_all)
 export(cleanup_output)
 export(create_beamer_presentation)
@@ -13,9 +15,12 @@ export(genericScaledPlot)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
+export(matDiag)
 export(matGetMatElem)
+export(matLowerTri)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
 export(sConvertMatrixToLaTexArray)
+export(sGetParentRow)
 export(vecGetVecElem)
 importFrom(R6,R6Class)
