Added helper function to determine os Changed to absolute paths for LibO for macosx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(create_html_output_skeleton)
 export(create_odg_graphic)
 export(create_pdf_output_skeleton)
 export(genericScaledPlot)
+export(get_os)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
