Current changes committed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(matLowerTri)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
 export(sConvertMatrixToLaTexArray)
+export(sConvertVectorToLaTexArray)
 export(sGetParentRow)
 export(vecGetVecElem)
 export(write_bib)
