Updated inclusion of odg-graphics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(odg.graphics.conv.hook)
 export(sConvertMatrixToLaTexArray)
 export(sConvertVectorToLaTexArray)
 export(sGetParentRow)
+export(use_odg_graphic)
 export(vecGetVecElem)
 export(write_bib)
 importFrom(R6,R6Class)
