--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(genericScaledPlot)
 export(get_latest_change)
 export(get_odg_prog_path)
 export(get_os)
+export(get_this_rmd)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
@@ -26,6 +27,7 @@ export(matLowerTri)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
 export(sConvertMatrixToLaTexArray)
+export(sConvertRowVectorToLaTexArray)
 export(sConvertVectorToLaTexArray)
 export(sGetParentRow)
 export(use_odg_graphic)
