First trial of implementing new hook function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(matGetMatElem)
 export(matLowerTri)
 export(move_doc_to_subdir)
 export(odg.graphics.conv.hook)
+export(odg_convert_hook)
 export(sConvertMatrixToLaTexArray)
 export(sConvertRowVectorToLaTexArray)
 export(sConvertVectorToLaTexArray)
