--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_latest_change)
 export(get_odg_prog_path)
 export(get_os)
 export(get_this_rmd)
+export(hook_convert_odg)
 export(insertOdgAsPdf)
 export(insertOdgAsPng)
 export(insertOdsAsPdf)
